--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,9 @@
 <body>
   <div class="app">
     <header></header>
-    <main id="cards"></main>
+    <main id="cards">
+      <div class="card"></div>
+    </main>
   </div>
 </body>
 </html>
