--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@
     <header></header>
     <main id="cards">
       <div class="card"></div>
+      <div class="card"></div>
     </main>
   </div>
 </body>
