--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,9 @@
   <div class="app">
     <header></header>
     <main id="cards">
-      <div class="card"></div>
+      <div class="card">
+        <h2>24/11 <span>quinta</span></h2>
+      </div>
       <div class="card"></div>
     </main>
   </div>
