--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,11 @@
       <div class="card">
         <h2>24/11 <span>quinta</span></h2>
         <ul>
-          <li></li>
+          <li>
+            <img src="" alt="">
+            <strong>07:00</strong>
+            <img src="" alt="">
+          </li>
         </ul>
       </div>
       <div class="card"></div>
