--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,14 @@
             <img src="" alt="">
           </li>
         </ul>
+
+        <ul>
+          <li>
+            <img src="" alt="">
+            <strong>07:00</strong>
+            <img src="" alt="">
+          </li>
+        </ul>
       </div>
       <div class="card"></div>
     </main>
