--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,9 @@
 </head>
 <body>
   <div class="app">
-    <header></header>
+    <header>
+      <img src="./assets/logo.svg" alt="">
+    </header>
     <main id="cards">
       <div class="card">
         <h2>24/11 <span>quinta</span></h2>
