--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 <body>
   <div class="app">
     <header>
-      <img src="./assets/logo.svg" alt="">
+      <img src="./assets/logo.svg" alt="Logo da NLW Copa">
     </header>
     <main id="cards">
       <div class="card">
