--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
         <h2>24/11 <span>quinta</span></h2>
         <ul>
           <li>
-            <img src="" alt="">
+            <img src="./assets/icon-brasil.svg" alt="Icone do Brasil">
             <strong>16:00</strong>
             <img src="" alt="">
           </li>
