--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
           <li>
             <img src="./assets/icon-brasil.svg" alt="Icone do Brasil">
             <strong>16:00</strong>
-            <img src="" alt="">
+            <img src="./assets/icon-serbia.svg" alt="Logo da Serbia">
           </li>
         </ul>
       </div>
