--- a/index.htm
+++ b/index.htm
@@ -15,9 +15,9 @@
         <h2>24/11 <span>quinta</span></h2>
         <ul>
           <li>
-            <img src="./assets/icon-brasil.svg" alt="Icone do Brasil">
+            <img src="./assets/icon-brasil.svg" alt="Bandeira do Brasil">
             <strong>16:00</strong>
-            <img src="./assets/icon-serbia.svg" alt="Logo da Serbia">
+            <img src="./assets/icon-serbia.svg" alt="Bandeira da Serbia">
           </li>
         </ul>
       </div>
