--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
   <title>Calendário de Jogos - NLW Copa</title>
 </head>
 <body>
-  <div class="app">
+  <div id="app">
     <header>
       <img src="./assets/logo.svg" alt="Logo da NLW Copa">
     </header>
