--- a/index.htm
+++ b/index.htm
@@ -15,8 +15,7 @@
     <title>Calendário de Jogos - NLW Copa</title>
   </head>
   <body>
-    <div id="app">
-    </div>
+    <div id="app"></div>
     <script src="./main.js"></script>
   </body>
 </html>
