--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
     />
     <title>Calendário de Jogos - NLW Copa</title>
   </head>
-  <body class="blue">
+  <body class="green">
     <div id="app">
       <header>
         <img src="./assets/logo.svg" alt="Logo da NLW Copa" />
