--- a/index.htm
+++ b/index.htm
@@ -12,9 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon"/>
     <title>Calendário de Jogos - NLW Copa</title>
   </head>
-  <body class="blue">
+  <body class="">
     <div id="app">
       <header>
         <img src="./assets/logo.svg" alt="Logo da NLW Copa" />
