--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon"/>
     <title>Calendário de Jogos - NLW Copa</title>
   </head>
-  <body class="">
+  <body class="green">
     <div id="app">
       <header>
         <img src="./assets/logo.svg" alt="Logo da NLW Copa" />
