--- a/index.htm
+++ b/index.htm
@@ -17,8 +17,13 @@
   </head>
   <body class="green">
     <div id="app">
+      
       <header>
         <img src="./assets/logo.svg" alt="Logo da NLW Copa" />
+        <div class="toggle">
+          <input id="switch" type="checkbox" name="theme">
+          <label for="switch">Toggle</label>
+        </div>
       </header>
         <main id="cards"></main>
     </div>
