--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon"/>
     <title>Calendário de Jogos - NLW Copa</title>
   </head>
-  <body class="green">
+  <body class="container">
     <div id="app">
       
       <header>
